#53 Login/Signup Fixes
-Fixed the visual overlap for the css in the login and signup pages
-removed outdated login code from main menu screen
-made the login/signup button look like they are being clicked

--- a/ColossalGame/ColossalGame/ClientApp/src/components/UserAuth.css
+++ b/ColossalGame/ColossalGame/ClientApp/src/components/UserAuth.css
@@ -3,32 +3,15 @@
     General
     
 ----------------*/
-.enclosing {
+.logSignEnclosing {
     position: relative;
-}
-
-.usernameTextbox {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: black;
-}
-
-.passwordTextbox {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, 50%);
-    color: black;
-}
-
-.btn {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, 120%);
-    color: white;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0 20px;
 }
 
 /*---------------------
@@ -51,7 +34,7 @@
     border-radius: 20px;
 }
 
-.container input {
+.formContainer input {
     display: block;
     margin: 0 auto;
     width: 60%;
@@ -60,13 +43,21 @@
     margin-bottom: 35px;
 }
 
-button {
+.logSignBut {
     width: 60%;
     height: 40px;
     background-color: green;
     color: white;
     border-radius: 10px;
     border: 1px;
+}
+
+.logSignBut:active {
+    box-shadow: inset 0 4px 10px 4px rgba(19, 35, 47, 0.3);
+}
+
+.logSignBut:focus {
+    outline: none;
 }
 
 /*---------------------
@@ -106,6 +97,6 @@ button {
 }
 
 .switchUp li:active {
-    background: blue;
+    background: green;
     color: #ffffff;
 }
